--- a/mingpt/gpt2_train_cfg.yaml
+++ b/mingpt/gpt2_train_cfg.yaml
@@ -1,15 +1,15 @@
 data_config:
-  path: https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt
+  path: /home/robin/work_dir/pytorch-training-toolkit/mingpt/data/input.txt
   block_size: 128
   train_split: 0.9
   truncate: 0.05
 gpt_config:
-  n_layer: 8
-  n_head: 8
-  n_embd: 512
+  n_layer: 4
+  n_head: 4
+  n_embd: 128
 trainer_config:
   max_epochs: 10
-  batch_size: 216
+  batch_size: 32
   data_loader_workers: 4
   grad_norm_clip: 1.0
   snapshot_path: gpt_snapshot.pt
